Fix circular dep in order api
